@@ -156,3 +156,13 @@
   width: 180px;
   float: left;
 }
+
+#imgp_relbox_control {
+  clear: both;
+}
+
+#imgp_relbox_show_control {
+}
+
+#imgp_relbox_link_control {
+}
